--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     ></script>
     <script src="https://unpkg.com/magic-grid/dist/magic-grid.min.js"></script>
     <link rel="stylesheet" href="index.css" />
+    <link rel = "stylesheet" href = "dark.css" />
   </head>
 
   <body>
